--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <!-- Desktop Nav -->
                 <div class="hidden md:flex items-center space-x-8">
-                    <button onclick="navigateTo('home')" class="text-sm font-bold uppercase tracking-widest hover:text-blue-600 transition">Home</button>
+                    <button onclick="navigateTo('index')" class="text-sm font-bold uppercase tracking-widest hover:text-blue-600 transition">Home</button>
                     
                     <!-- Services Dropdown -->
                     <div class="relative dropdown h-20 flex items-center">
@@ -332,4 +332,5 @@
         }
     </script>
 </body>
+
 </html>
