--- a/cloud-systems.html
+++ b/cloud-systems.html
@@ -60,7 +60,7 @@
             <div class="flex justify-between items-center h-20">
                 
                 <!-- Logo -->
-                <a href="" class="flex items-center cursor-pointer">
+                <a href="https://supportvelocity.github.io/support-velocity/" class="flex items-center cursor-pointer">
                     <span class="text-xl italic font-black tracking-tighter text-slate-900 uppercase">
                         TECH<span class="text-blue-600">VELOCITY</span>
                     </span>
@@ -251,4 +251,5 @@
         }
     </script>
 </body>
+
 </html>
