--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         </div>
                     </div>
 
-                  <a href="/support/" target="_blank" class="inline-block px-8 py-2.5 bg-blue-600 text-white text-sm font-bold rounded-full shadow-lg shadow-blue-500/30 hover:bg-blue-700 transition-all duration-300">
+                  <a href="/support-velocity/support/" target="_blank" class="inline-block px-8 py-2.5 bg-blue-600 text-white text-sm font-bold rounded-full shadow-lg shadow-blue-500/30 hover:bg-blue-700 transition-all duration-300">
                     Support Centre
                 </a>
                </div>
@@ -334,4 +334,5 @@
 </body>
 
 </html>
+
 
