--- a/cloud-systems.html
+++ b/cloud-systems.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloud Systems | Support Velocity</title>
+    <title>Cloud Systems | TechGrid Systems</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800;900&display=swap');
@@ -60,9 +60,9 @@
             <div class="flex justify-between items-center h-20">
                 
                 <!-- Logo -->
-                <a href="https://supportvelocity.github.io/support-velocity/" class="flex items-center cursor-pointer">
+                <a href="https://techgrid-systems.github.io/techgrid-systems/" class="flex items-center cursor-pointer">
                     <span class="text-xl italic font-black tracking-tighter text-slate-900 uppercase">
-                        TECH<span class="text-blue-600">VELOCITY</span>
+                        TechGrid<span class="text-blue-600">Systems</span>
                     </span>
                 </a>
 
@@ -107,7 +107,7 @@
                         </div>
                     </div>
 
-                    <a href="/support-velocity/support/" class="px-8 py-3 bg-blue-600 text-white text-xs font-black uppercase tracking-widest rounded hover:bg-blue-700 transition shadow-lg shadow-blue-200">
+                    <a href="/techgrid-systems/support/" class="px-8 py-3 bg-blue-600 text-white text-xs font-black uppercase tracking-widest rounded hover:bg-blue-700 transition shadow-lg shadow-blue-200">
                         Support
                     </a>
                 </div>
@@ -184,7 +184,7 @@
     <footer class="bg-[#030712] text-white pt-24 pb-12 relative">
         <div class="max-w-7xl mx-auto px-6">
             <div class="mb-20">
-                <h4 class="text-2xl italic font-black tracking-tighter uppercase mb-6">TECH<span class="text-blue-600">VELOCITY</span></h4>
+                <h4 class="text-2xl italic font-black tracking-tighter uppercase mb-6">TECH<span class="text-blue-600">TechGrid Systems</span></h4>
                 <p class="text-slate-500 text-sm font-medium leading-relaxed max-w-sm">
                     High-momentum IT infrastructure, security, and hybrid cloud.
                 </p>
@@ -215,7 +215,7 @@
                 </div>
             </div>
             <div class="pt-12 border-t border-slate-900 flex justify-between items-center relative">
-                <p class="text-[9px] font-black uppercase tracking-[0.2em] text-slate-700">© 2024 TECH VELOCITY LIMITED.</p>
+                <p class="text-[9px] font-black uppercase tracking-[0.2em] text-slate-700">© 2024 TechGrid Systems LIMITED.</p>
                 <button onclick="window.scrollTo({top: 0, behavior: 'smooth'})" class="absolute right-0 bottom-4 w-12 h-12 bg-blue-600 rounded-full flex items-center justify-center hover:bg-blue-700 transition shadow-2xl shadow-blue-600/20">
                     <svg class="w-5 h-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="3" d="M5 15l7-7 7 7"></path></svg>
                 </button>
@@ -253,6 +253,7 @@
 </body>
 
 </html>
+
 
 
 
