--- a/support/index.html
+++ b/support/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Support Portal | Support Velocity</title>
+    <title>Support Portal | TechGrid Systems</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
@@ -63,7 +63,7 @@
             <div class="flex justify-between h-16 items-center">
                 <div class="flex items-center gap-2 cursor-pointer" onclick="location.href='index.html'">
                     <span class="text-xl italic font-black tracking-tighter text-slate-900 uppercase">
-                        Support <span class="text-blue-600">VELOCITY</span>
+                        Support <span class="text-blue-600">TechGrid Systems</span>
                     </span>
                 </div>
 
@@ -90,7 +90,7 @@
                 
                 <p class="text-lg md:text-xl">
                     Got a new challenge you'd like support with? 
-                    <a href="mailto:sales@support-velocity.com" class="font-bold border-b-2 border-white hover:text-blue-400 hover:border-blue-400 transition-colors">
+                    <a href="mailto:sales@techgrid-systems.com" class="font-bold border-b-2 border-white hover:text-blue-400 hover:border-blue-400 transition-colors">
                         Talk to our sales team here.
                     </a>
                 </p>
@@ -106,7 +106,7 @@
                     <div class="max-w-md">
                         <h2 class="text-2xl font-bold mb-4">Email</h2>
                         <p class="text-gray-600 text-lg leading-relaxed">
-                            Drop us an <a href="mailto:support@support-velocity.co.uk" class="font-bold border-b-2 border-blue-600 hover:text-blue-600 transition-colors">email</a> and tell us what's gone wrong. Include your contact details, so we can contact you directly.
+                            Drop us an <a href="mailto:support@techgrid-systems.co.uk" class="font-bold border-b-2 border-blue-600 hover:text-blue-600 transition-colors">email</a> and tell us what's gone wrong. Include your contact details, so we can contact you directly.
                         </p>
                     </div>
 
@@ -115,7 +115,7 @@
                         <p class="text-gray-600 text-lg leading-relaxed mb-6">
                             Click the button below to access our portal for general support enquiries.
                         </p>
-                        <a href="https://portal.support-velocity.com" class="inline-flex items-center btn-brand px-14 py-2 rounded-full font-bold text-lg shadow-lg shadow-blue-500/20">
+                        <a href="https://portal.techgrid-systems.com" class="inline-flex items-center btn-brand px-14 py-2 rounded-full font-bold text-lg shadow-lg shadow-blue-500/20">
                             Support Centre
                             <i class="fas fa-arrow-right ml-4 text-sm"></i>
                         </a>
@@ -130,7 +130,7 @@
 
                     <div class="max-w-md">
                         <h2 class="text-2xl font-bold mb-4">applications</h2>
-                        <a href="https://applications.support-velocity.com" class="inline-flex items-center btn-brand px-6 py-2 rounded-full font-bold text-lg mt-2 shadow-lg shadow-blue-500/20">
+                        <a href="https://applications.techgrid-systems.com" class="inline-flex items-center btn-brand px-6 py-2 rounded-full font-bold text-lg mt-2 shadow-lg shadow-blue-500/20">
                             Click here to go to our applications portal
                             <i class="fas fa-arrow-right ml-4 text-sm"></i>
                         </a>
@@ -151,17 +151,17 @@
                         <div class="bg-blue-600 p-1.5 rounded-lg">
                             <i class="fas fa-bolt text-white text-sm"></i>
                         </div>
-                        <span class="text-lg font-bold tracking-tight text-slate-800">Support Velocity</span>
+                        <span class="text-lg font-bold tracking-tight text-slate-800">TechGrid Systems</span>
                     </div>
                     <p class="text-slate-500 text-sm leading-relaxed">
-                        Providing high-velocity technical support and innovative solutions for your business challenges.
+                        Providing high TechGrid Systems technical support and innovative solutions for your business challenges.
                     </p>
                 </div>
 
                 <div>
                     <h3 class="text-sm font-bold uppercase tracking-wider text-slate-900 mb-6">Support</h3>
                     <ul class="space-y-4 text-sm text-slate-600">
-                        <li><a href="https://portal.support-velocity.com" class="hover:text-blue-600 transition-colors">Client Portal</a></li>
+                        <li><a href="https://portal.techgrid-systems.com" class="hover:text-blue-600 transition-colors">Client Portal</a></li>
                         <li><a href="" class="hover:text-blue-600 transition-colors">System Status</a></li>
                         <li><a href="#" class="hover:text-blue-600 transition-colors">Knowledge Base</a></li>
                         <li><a href="#" class="hover:text-blue-600 transition-colors">Downloads</a></li>
@@ -187,7 +187,7 @@
                         </li>
                         <li class="flex items-center gap-3">
                             <i class="fas fa-envelope text-blue-600"></i>
-                            support@support-velocity.co.uk
+                            support@techgrid-systems.co.uk
                         </li>
                     </ul>
                 </div>
@@ -195,7 +195,7 @@
 
             <div class="pt-8 border-t border-slate-200 flex flex-col md:flex-row justify-between items-center gap-4">
                 <p class="text-xs text-slate-500">
-                    &copy; 2026 Support Velocity Ltd. All rights reserved.
+                    &copy; 2026 TechGrid Systems Ltd. All rights reserved.
                 </p>
                 <div class="flex gap-6">
                     <a href="#" class="text-slate-400 hover:text-blue-600 transition-colors"><i class="fab fa-linkedin-in"></i></a>
@@ -206,4 +206,5 @@
     </footer>
 
 </body>
+
 </html>
