--- a/client-area/history.html
+++ b/client-area/history.html
@@ -44,7 +44,7 @@
                 <span class="text-[10px] tracking-[0.3em] uppercase opacity-70">Systems</span>
             </div>
             <nav class="hidden lg:flex items-center space-x-6 text-xs uppercase tracking-widest font-medium opacity-80 h-full">
-                <a href="javascript:void(0)" onclick="navigateTo('dashboard.html')" class="h-16 flex items-center px-2">Home</a>
+                <a href="javascript:void(0)" onclick="navigateTo('home.html')" class="h-16 flex items-center px-2">Home</a>
                 <a href="javascript:void(0)" onclick="navigateTo('new-request.html')" class="h-16 flex items-center px-2">New Request</a>
                 <a href="javascript:void(0)" onclick="navigateTo('history.html')" class="h-16 flex items-center px-2 border-b-2 border-blue-400 text-blue-400">My History</a>
             </nav>
